# google-ads-mcp

./: .gitignore  AGENTS.md  API_AUDIT.md  API_COVERAGE.md  API_UPDATE.md  AUDIT.md  BUSINESS_LOGIC_AUDIT.md  CLAUDE.md  CODE_STANDARDS_CHECKLIST.md  CROSS_REFERENCE.md  FIELD_COVERAGE_AUDIT.md  IMPLEMENTATION_VALIDATION.md  LICENSE  README.md  TRACKER.md  check_oneofs.py  main.py  pyproject.toml
src/: sdk_client.py  utils.py
src/servers/: __init__.py  account.py  account_budget_proposal_server.py  account_link_server.py  ad_group_ad_label_server.py  ad_group_ad_server.py  ad_group_asset_server.py  ad_group_asset_set_server.py  ad_group_bid_modifier_server.py  ad_group_criterion_customizer_server.py  ad_group_criterion_label_server.py  ad_group_criterion_server.py  ad_group_customizer_server.py  ad_group_label_server.py  ad_group_server.py  ad_parameter_server.py  ad_server.py  asset_generation_server.py  asset_group_asset_server.py  asset_group_listing_group_filter_server.py  asset_group_server.py  asset_group_signal_server.py  asset_server.py  asset_set_asset_server.py  asset_set_server.py  assets.py  audience_insights_server.py  audience_server.py  automatically_created_asset_removal_server.py  batch_job_server.py  benchmarks_server.py  (+95 more)
tests/: conftest.py  test_account_budget_proposal_service.py  test_account_link_service.py  test_ad_group_ad_label_service.py  test_ad_group_ad_service.py  test_ad_group_asset_service.py  test_ad_group_asset_set_service.py  test_ad_group_bid_modifier_service.py  test_ad_group_criterion_customizer_service.py  test_ad_group_criterion_label_service.py  test_ad_group_criterion_service.py  test_ad_group_customizer_service.py  test_ad_group_label_service.py  test_ad_group_service.py  test_ad_parameter_service.py  test_ad_service.py  test_asset_generation_service.py  test_asset_group_asset_service.py  test_asset_group_listing_group_filter_service.py  test_asset_group_service.py  test_asset_group_signal_service.py  test_asset_service.py  test_asset_set_asset_service.py  test_asset_set_service.py  test_audience_insights_service.py  test_audience_service.py  test_automatically_created_asset_removal_service.py  test_batch_job_service.py  test_benchmarks_service.py  test_bidding_data_exclusion_service.py  test_bidding_seasonality_adjustment_service.py  test_bidding_strategy_service.py  test_billing_setup_service.py  test_brand_suggestion_service.py  test_budget_service.py  test_campaign_asset_service.py  test_campaign_asset_set_service.py  test_campaign_bid_modifier_service.py  test_campaign_conversion_goal_service.py  test_campaign_criterion_service.py  (+75 more)
tools/: audit_coverage.py
(+122 files in other folders)
